fix deploy railway
