# app/Http/Controllers/Api/V1/StudentController.php
@@ -159,7 +159,7 @@ class StudentController extends Controller
      *                  @OA\Property(property="gender", type="string", example="male"),
      *                  @OA\Property(property="education", type="string", example="SMA"),
      *                  @OA\Property(property="user_id", type="integer", example=1, nullable=true),
-     *                  @OA\Property(property="guest_session_token", type="string", example=eb68fc6f-173f-4cbe-a710-780c1cfc21cd, nullable=true),
+     *                  @OA\Property(property="guest_session_token", type="string", example="eb68fc6f-173f-4cbe-a710-780c1cfc21cd", nullable=true),
      *                  @OA\Property(property="created_at", type="string", format="date-time"),
      *                  @OA\Property(property="updated_at", type="string", format="date-time")
      *              )
